[gd_scene load_steps=10 format=3 uid="uid://b3orlpwd250y6"]

[ext_resource type="Script" path="res://Scripts/project.gd" id="1_0leeo"]
[ext_resource type="Theme" uid="uid://fswpiwpw0kr4" path="res://Theme/launch_button.theme" id="1_18cxl"]
[ext_resource type="Texture2D" uid="uid://l1xdxa1li4m8" path="res://Textures/import.png" id="2_aw3rp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qtv0o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cqkua"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xthhy"]
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fbcuw"]
bg_color = Color(0.427451, 0.427451, 0.427451, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2lmdt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2vugd"]

[node name="LaunchButton" type="Button"]
unique_name_in_owner = true
offset_right = 65.0
offset_bottom = 32.0
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("1_18cxl")
alignment = 0
script = ExtResource("1_0leeo")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_qtv0o")

[node name="Hbox" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ProjectLabel" type="Label" parent="PanelContainer/Hbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Dog"
visible_characters = 0
visible_ratio = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Hbox"]
layout_mode = 2
size_flags_horizontal = 2

[node name="VersionLabel" type="Label" parent="PanelContainer/Hbox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Dog"

[node name="VersionDownloadButton" type="Button" parent="PanelContainer/Hbox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/outline_size = 1
theme_override_constants/icon_max_width = 16
theme_override_styles/normal = SubResource("StyleBoxEmpty_cqkua")
theme_override_styles/hover = SubResource("StyleBoxFlat_xthhy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fbcuw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_2lmdt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2vugd")
icon = ExtResource("2_aw3rp")
icon_alignment = 1
